--- a/style.css
+++ b/style.css
@@ -9,4 +9,53 @@ body {
   padding: 0;
 }
 
-/* Add styles here! */
+header {
+  border-bottom: 5px solid hsl(0deg, 0%, 40%); /*(medium)*/
+}
+
+.max-width-wrapper {
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  max-width: 300px;
+  padding-top: 48px;
+  padding-bottom: 32px;
+  padding-left: 24px;
+}
+
+.title {
+  padding-bottom: 16px;
+  font-size: 1.5rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  padding-top: 64px;
+  background-color: hsl(0deg, 0%, 60%); /*(light)*/
+  height: 100%;
+}
+
+.card {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 24px;
+  background-color: white;
+  border-bottom: 5px solid hsl(0deg, 0%, 40%); /*(medium)*/
+  max-width: 560px;
+}
+
+.indented-heading {
+  width: fit-content;
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px 36px;
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+  font-size: 1.25rem;
+  margin-top: -8px;
+  margin-left: -36px;
+}
